finishing the assignment

--- a/2019Fall-Web/Web-Lesson2/HTML Task/index.html
+++ b/2019Fall-Web/Web-Lesson2/HTML Task/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="utf-8" />
     <title>Ducati Monster</title>
-
 </head>
 <body>
-    <h1>Ducati Monster <br /><img src="ducati logo.png" /> </h1>
-    <h2>Production 1993 - present </h2>
-    <h2>Class: Naked Bike</h2>
-
-    <p>The Ducati Monster was originally designed by <a href="https://en.wikipedia.org/wiki/Miguel_Angel_Galluzzi">Miguel Angel Galluzzi</a> and produced by <a href="https://www.ducati.com/us/en/home">Ducati in 1993.</a> </p>
-    <p>The Monster line has had many different models. Often times a newer, more powerful model, would replace a previous model. In order to keep the cost of the bikes low, they were designed by using parts from existing Ducati models.</p>
+    <div>
+        <h1>Ducati Monster <br /><img src="ducati logo.png" /> </h1>
+        <h2>Production 1993 - present </h2>
+        <h2>Class: Naked Bike</h2>
+        <p>The Ducati Monster was originally designed by <a href="https://en.wikipedia.org/wiki/Miguel_Angel_Galluzzi">Miguel Angel Galluzzi</a> and produced by <a href="https://www.ducati.com/us/en/home">Ducati in 1993.</a> </p>
+        <p>The Monster line has had many different models. Often times a newer, more powerful model, would replace a previous model. In order to keep the cost of the bikes low, they were designed by using parts from existing Ducati models.</p>
+    </div>
     <div>
         <h4>Variations: </h4>
         <p>(The model numbers also denote the engine size)</p>
@@ -56,7 +56,7 @@
 
     <div>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/DUFJwPhlg-Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
+     </div>
 
 </body>
 </html>
